# cosmos-transfer1-diffusion-renderer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Taskfile.yml  USERGUIDE.md  cosmos-predict1.yaml  docker-compose.yml  pyproject.toml  requirements.txt
cosmos_predict1/autoregressive/training/modules/: attention.py
cosmos_predict1/diffusion/inference/: diffusion_renderer_pipeline.py  inference_forward_renderer.py  inference_inverse_renderer.py  inference_utils.py
cosmos_predict1/diffusion/model/: model_diffusion_renderer.py
cosmos_predict1/diffusion/training/module/: blocks.py
docker/: entrypoint.sh
nvidia_cosmos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: concat_relit_chunks.py  dataproc_extract_frames_from_video.py  probe_video.py
