# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Build and upload instructions:
#   pip3 install --upgrade build twine
#   python3 -m build
#   python3 -m twine upload dist/*


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-cosmos"
version = "1.0.3"
authors = [
    {name = "NVIDIA Corporation"},
]
description = "Cosmos World Foundation Model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "attrs>=25.1.0",
    "better-profanity>=0.7.0",
    "boto3>=1.35.99",
    "decord>=0.6.0",
    "diffusers>=0.32.2",
    "einops>=0.8.1",
    "huggingface-hub>=0.29.2",
    "hydra-core>=1.3.2",
    "imageio[pyav,ffmpeg]>=2.37.0",
    "iopath>=0.1.10",
    "ipdb>=0.13.13",
    "loguru>=0.7.2",
    "mediapy>=1.2.2",
    "megatron-core>=0.10.0",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "nvidia-ml-py>=12.535.133",
    "omegaconf>=2.3.0",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "pillow>=11.1.0",
    "protobuf>=4.25.3",
    "pynvml>=12.0.0",
    "pyyaml>=6.0.2",
    "retinaface-py>=0.0.2",
    "safetensors>=0.5.3",
    "scikit-image>=0.25.2",
    "sentencepiece>=0.2.0",
    "setuptools>=76.0.0",
    "termcolor>=2.5.0",
    "torch>=2.6.0",
    "tqdm>=4.66.5",
    "transformers>=4.49.0",
]

[project.urls]
homepage = "https://github.com/nvidia-cosmos/cosmos-predict1/"
issues = "https://github.com/nvidia-cosmos/cosmos-predict1/issues"

[tool.setuptools]
packages = ["cosmos_predict1"]

[tool.isort]
profile = "black"
known_third_party = ["third_party"]
skip = ["third_party"]
line_length = 120

[tool.black]
line-length = 120
target_version = ['py310']
exclude = 'third_party'

[tool.coverage.report]
include_namespace_packages = true
skip_empty = true
omit = [
    "tests/*",
    "legacy/*",
    ".venv/*",
    "**/test_*.py",
    "config.py",
    "config-3.10.py"
]
